<resources>
    <string name="app_name">Gelismiskomutlari</string>
    <string name="uyg1">Uygulama 1(selam)</string>
    <string name="uyg2">Uygulama 2(5+10)</string>
    <string name="uyg3">Uygulama 3(toplama)</string>
    <string name="uyg4">Uygulama 4(?)</string>
    <string name="uyg5">Uygulama 5(Cihaz)</string>
    <string name="uyg6">Uygulama 6(alan hesaplama)</string>
    <string name="uyg7">Uygulama 7(yaş)</string>
    <string name="uyg8">Uygulama 8(Araçlar)</string>
    <string name="uyg9">Uygulama 9(üçgen çevre)</string>
    <string name="uyg10">Uygulama 10(asker)</string>
    <string name="uyg11">Uygulama 11(index)</string>
    <string name="uyg12">Uygulama 12(Adlar)</string>
    <string name="uyg13">Uygulama 13</string>

</resources>