<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uyg1Goster"
        android:text="@string/uyg1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/uyg2Goster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="uyg2Goster"
        android:text="@string/uyg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/uyg3Goster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uyg3Goster"
        android:text="@string/uyg3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyg2Goster" />

    <Button
        android:id="@+id/uyg4Goster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uyg4Goster"
        android:text="@string/uyg4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyg3Goster" />

    <Button
        android:id="@+id/uyg5Goster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uyg5Goster"
        android:text="@string/uyg5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyg4Goster" />

    <Button
        android:id="@+id/uyg6Goster"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:onClick="uyg6Goster"
        android:text="@string/uyg6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyg5Goster" />

    <Button
        android:id="@+id/uyg7Goster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uyg7Goster"
        android:text="@string/uyg7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyg6Goster" />

    <Button
        android:id="@+id/uyg8Goster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uyg8Goster"
        android:text="@string/uyg8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyg7Goster" />

    <Button
        android:id="@+id/uyg9Goster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uyg9Goster"
        android:text="@string/uyg9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyg8Goster" />

    <Button
        android:id="@+id/uyg10Goster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uyg10Goster"
        android:text="@string/uyg10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyg9Goster" />

    <Button
        android:id="@+id/uyg11Goster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uyg11Goster"
        android:text="@string/uyg11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyg10Goster" />

    <Button
        android:id="@+id/uyg12Goster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uyg12Goster"
        android:text="@string/uyg12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyg11Goster" />

</androidx.constraintlayout.widget.ConstraintLayout>